apps/test-nodejs-01/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-nodejs-01
  labels:
    name: test-nodejs-01
    managed-by: dev-portal
