apps/test-nodejs-01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nodejs-01-service
  namespace: test-nodejs-01
  labels:
    app: test-nodejs-01
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: test-nodejs-01
